--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -2,7 +2,7 @@ name: e2e test
 on:
   push:
     branches:
-      - main
+      - feat-ht-e2e
 jobs:
   e2e-on-linux:
     runs-on: ubuntu-latest
@@ -39,9 +39,9 @@ jobs:
           aws eks update-kubeconfig --region ap-southeast-1 --name dtm-test
       - name: apply
         run: ./dtm apply -f ./test/e2e/yaml/e2e-config.yaml -y
-      - name: apply twice
-        run: ./dtm apply -f ./test/e2e/yaml/e2e-config.yaml -y
-      - name: verify
-        run: ./dtm verify -f ./test/e2e/yaml/e2e-config.yaml
-      - name: clean
-        run: ./dtm delete -f ./test/e2e/yaml/e2e-config.yaml --force -y
+#      - name: apply twice
+#        run: ./dtm apply -f ./test/e2e/yaml/e2e-config.yaml -y
+#      - name: verify
+#        run: ./dtm verify -f ./test/e2e/yaml/e2e-config.yaml
+#      - name: clean
+#        run: ./dtm delete -f ./test/e2e/yaml/e2e-config.yaml --force -y
