--- a/test/e2e/yaml/e2e-config.yaml
+++ b/test/e2e/yaml/e2e-config.yaml
@@ -1,25 +1,70 @@
 tools:
-  - name: argocd
-    plugin: argocd
+  # name of the instance with github-repo-scaffolding-golang
+  - name: go-webapp-repo
+    plugin: github-repo-scaffolding-golang
+    # options for the plugin
     options:
-      # need to create the namespace or not, default: false
-      create_namespace: true
-      repo:
-        # name of the Helm repo
-        name: argo
-        # url of the Helm repo
-        url: https://argoproj.github.io/argo-helm
-      # Helm chart information
-      chart:
-        # name of the chart
-        chart_name: argo/argo-cd
-        # release name of the chart
-        release_name: argocd
-        # k8s namespace where ArgoCD will be installed
-        namespace: argocd
-        # whether to wait for the release to be deployed or not
-        wait: true
-        # the time to wait for any individual Kubernetes operation (like Jobs for hooks). This defaults to 5m0s
-        timeout: 5m
-        # whether to perform a CRD upgrade during installation
-        upgradeCRDs: true
+      # the repo's owner. It should be case-sensitive here; strictly use your GitHub username; please change the value below.
+      owner: daniel-hutao
+      # the repo which you'd like to create; please change the value below.
+      repo: go-webapp-1
+      # the branch of the repo you'd like to hold the code
+      branch: main
+      # the image repo you'd like to push the container image; please change the value below.
+      image_repo: daniel-hutao/go-webapp-1
+  - name: jira-github-default
+    plugin: jira-github-integ
+    # optional; if specified, dtm will make sure the dependency is applied first before handling this tool.
+    dependsOn: [ "go-webapp-repo.github-repo-scaffolding-golang" ]
+    # options for the plugin
+    options:
+      # the repo's owner
+      owner: daniel-hutao
+      # the repo where you'd like to setup GitHub Actions
+      repo: go-webapp-1
+      # "base url: https://id.atlassian.net"
+      jiraBaseUrl: https://merico.atlassian.net
+      # "need real user email in cloud Jira"
+      jiraUserEmail: tao.hu@merico.dev
+      # "get it from project url, like 'HEAP' from https://merico.atlassian.net/jira/software/projects/HEAP/pages"
+      jiraProjectKey: DET
+      # main branch of the repo (to which branch the plugin will submit the workflows)
+      branch: main
+  - name: golang-webapp-actions
+    plugin: githubactions-golang
+    # optional; if specified, dtm will make sure the dependency is applied first before handling this tool.
+    dependsOn: [ "go-webapp-repo.github-repo-scaffolding-golang" ]
+    # options for the plugin
+    options:
+      # the repo's owner. It should be case-sensitive here; strictly use your GitHub user name; please change the value below.
+      owner: daniel-hutao
+      # the repo where you'd like to setup GitHub Actions; please change the value below to an existing repo.
+      repo: go-webapp-1
+      # programming language specific settings
+      language:
+        name: go
+        # version of the language
+        version: "1.17"
+      # main branch of the repo (to which branch the plugin will submit the workflows)
+      branch: main
+      build:
+        # default to false
+        enable: True
+        # build command, OPTIONAL, the given value below is default value
+        command: "go build ./..."
+      test:
+        # default to false
+        enable: True
+        # test command, OPTIONAL, the given value below is default value
+        command: "go test ./..."
+        coverage:
+          # default to false
+          enable: True
+          # go test profile subcommand, OPTIONAL, the given value below is default value
+          profile: "-race -covermode=atomic"
+          output: "coverage.out"
+      docker:
+        # docker build/push related, default to false
+        enable: False
+        # dockerhub image repo; please change the value below.
+        repo: go-webapp-1
