--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           aws eks update-kubeconfig --region ap-southeast-1 --name dtm-test
       - name: apply
-        run: export GITHUB_TOKEN=${{ github.GITHUB_TOKEN }} && export JIRA_API_TOKEN=${{ secret.JIRA_API_TOKEN }} && ./dtm apply -f ./test/e2e/yaml/e2e-config.yaml -y
+        run: export GITHUB_TOKEN=${{ github.GITHUB_TOKEN }} && export JIRA_API_TOKEN=${{ secrets.JIRA_API_TOKEN }} && ./dtm apply -f ./test/e2e/yaml/e2e-config.yaml -y
 #      - name: apply twice
 #        run: ./dtm apply -f ./test/e2e/yaml/e2e-config.yaml -y
 #      - name: verify
