test: support gitops toolchain test in e2e
Signed-off-by: Daniel Hu <tao.hu@merico.dev>

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -27,7 +27,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Build
-        run: make build -j8
+        run: make build
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
