--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,9 @@ site_description: The DevStream Docs
 markdown_extensions:
   toc:
     permalink: true
+extra:
+  version:
+    provider: mike
 nav:
   - 'quickstart_en.md'
   - Tutorials:
