--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,11 +12,10 @@ extra:
     provider: mike
 nav:
   - 'quickstart_en.md'
-  - Tutorials:
-    - 'tutorials/autocomplete.md'
-    - Best Pratices:
-      - 'tutorials/best-practices/gitops.md'
+  - Best Practices:
+    - 'best-practices/gitops.md'
   - Commands:
+    - 'commands/autocomplete.md'
     - 'commands/init.md'
     - 'commands/apply.md'
     - 'commands/verify.md'
