--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,9 @@ markdown_extensions:
     permalink: true
 extra:
   version:
-    provider: mike
+    provider: json
+    index: "https://docs.devstream.io/en/latest/"
+    current: latest
 nav:
   - 'quickstart_en.md'
   - Best Practices:
